[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", branch = "master", features = ["experimental-threads"] }
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
    "io-util"
] }
