[package]
name = "nodetunnel"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.3.4"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
    "io-util"
] }
serde = { version = "1.0", features = ["derive"] }